Apply DLC filter over all others

--- a/src/components/editor.scss
+++ b/src/components/editor.scss
@@ -40,6 +40,11 @@
   }
 }
 
+.category-divider {
+  border-bottom: 4px solid #1c2632;
+  margin-bottom: 8px;
+}
+
 .btn {
   position: relative;
   padding: 0;
